[gd_scene load_steps=9 format=4 uid="uid://b0or30nw4pedo"]

[ext_resource type="Script" path="res://main.gd" id="1_uvtnw"]
[ext_resource type="Script" path="res://components/controllers/turn_controller/turn_controller.gd" id="2_dsylg"]
[ext_resource type="Resource" uid="uid://shdldokc45lk" path="res://matches/base_match/match.tres" id="2_ys7b8"]
[ext_resource type="PackedScene" uid="uid://dkfsgrltwdw36" path="res://components/controllers/ai_controller/ai_controller.tscn" id="3_peoit"]
[ext_resource type="PackedScene" uid="uid://dqm44jxtilmoy" path="res://components/tilemaps/medieval_town/medieval_town.tscn" id="4_sk2fg"]
[ext_resource type="PackedScene" uid="uid://ui5n72gcvt17" path="res://features/chess_board/chess_board.tscn" id="5_c0n4n"]
[ext_resource type="PackedScene" uid="uid://hixjhyddggqj" path="res://features/selector/selector.tscn" id="6_4wac5"]
[ext_resource type="Script" path="res://components/controllers/party_controller/party_controller.gd" id="7_l4y32"]

[node name="TestMain" type="Node2D" node_paths=PackedStringArray("player_party", "opponent_party", "selector", "turn_controller", "chess_board")]
script = ExtResource("1_uvtnw")
player_party = NodePath("ChessBoard/Player")
opponent_party = NodePath("ChessBoard/Oppponent")
selector = NodePath("ChessBoard/Selector")
turn_controller = NodePath("TurnController")
match_config = ExtResource("2_ys7b8")
use_config = true
chess_board = NodePath("ChessBoard")

[node name="TurnController" type="Node" parent="." node_paths=PackedStringArray("player_controller", "ai_controller", "chess_board", "info_label")]
script = ExtResource("2_dsylg")
player_controller = NodePath("../ChessBoard/Selector")
ai_controller = NodePath("../AiController")
chess_board = NodePath("../ChessBoard")
info_label = NodePath("../Label")

[node name="AiController" parent="." node_paths=PackedStringArray("party", "chess_board") instance=ExtResource("3_peoit")]
party = NodePath("../ChessBoard/Oppponent")
chess_board = NodePath("../ChessBoard")

[node name="MedievalTown" parent="." instance=ExtResource("4_sk2fg")]
position = Vector2(0, -12)
tile_map_data = PackedByteArray("AAAGAAEAAAAGAAAAAAAHAAEAAAAGAAAAAAAIAAEAAAAGAAAAAAAJAAEAAAAGAAAAAAAKAAEAAAAGAAAAAAALAAEAAAAGAAAAAAAMAAEAAAAGAAAAAAANAAEAAAAGAAAAAAAOAAEAAAAHAAAAAAAFAAEAAAAFAAAAAAAFAAIAAAAFAAEAAAAFAAMAAAAFAAEAAAAFAAQAAAAEAAIAAAAFAAUAAAAGAAEAAAAFAAYAAAAGAAEAAAAFAAcAAAAEAAAAAAAFAAgAAAAFAAEAAAAOAAIAAAAHAAEAAAAOAAMAAAAHAAEAAAAOAAQAAAACAAIAAAAOAAUAAAAGAAEAAAAOAAYAAAAGAAEAAAAOAAcAAAACAAAAAAAOAAgAAAAHAAEAAAAGAAIAAAAGAAEAAAAHAAIAAAAGAAEAAAAIAAIAAAAGAAEAAAAJAAIAAAAGAAEAAAAKAAIAAAAGAAEAAAALAAIAAAAGAAEAAAAMAAIAAAAGAAEAAAANAAIAAAAGAAEAAAANAAMAAAAGAAEAAAANAAQAAAAGAAEAAAANAAUAAAAGAAEAAAANAAYAAAAGAAEAAAANAAcAAAAGAAEAAAANAAgAAAAGAAEAAAAMAAgAAAAGAAEAAAALAAgAAAAGAAEAAAAKAAgAAAAGAAEAAAAJAAgAAAAGAAEAAAAIAAgAAAAGAAEAAAAHAAgAAAAGAAEAAAAGAAgAAAAGAAEAAAAGAAcAAAAGAAEAAAAGAAYAAAAGAAEAAAAGAAUAAAAGAAEAAAAGAAQAAAAGAAEAAAAGAAMAAAAGAAEAAAAHAAMAAAAGAAEAAAAIAAMAAAAGAAEAAAAJAAMAAAAGAAEAAAAKAAMAAAAGAAEAAAALAAMAAAAGAAEAAAAMAAMAAAAGAAEAAAAMAAQAAAAGAAEAAAAMAAUAAAAGAAEAAAAMAAYAAAAGAAEAAAAMAAcAAAAGAAEAAAALAAcAAAAGAAEAAAAKAAcAAAAGAAEAAAAJAAcAAAAGAAEAAAAIAAcAAAAGAAEAAAAHAAcAAAAGAAEAAAAHAAYAAAAGAAEAAAAHAAUAAAAGAAEAAAAHAAQAAAAGAAEAAAAIAAQAAAAGAAEAAAAJAAQAAAAGAAEAAAAKAAQAAAAGAAEAAAALAAQAAAAGAAEAAAALAAUAAAAGAAEAAAALAAYAAAAGAAEAAAAKAAYAAAAGAAEAAAAJAAYAAAAGAAEAAAAIAAYAAAAGAAEAAAAIAAUAAAAGAAEAAAAJAAUAAAAGAAEAAAAKAAUAAAAGAAEAAAAOAAkAAAAHAAEAAAAFAAkAAAAFAAEAAAAGAAoAAAAGAAIAAAAHAAoAAAAGAAIAAAAIAAoAAAAGAAIAAAAJAAoAAAAGAAIAAAAKAAoAAAAGAAIAAAALAAoAAAAGAAIAAAAMAAoAAAAGAAIAAAANAAoAAAAGAAIAAAAOAAoAAAAHAAIAAAAFAAoAAAAFAAIAAAAGAAkAAAAGAAEAAAAHAAkAAAAGAAEAAAAIAAkAAAAGAAEAAAAJAAkAAAAGAAEAAAAKAAkAAAAGAAEAAAALAAkAAAAGAAEAAAAMAAkAAAAGAAEAAAANAAkAAAAGAAEAAAAAAAUAAAAGAAEAAAABAAUAAAAGAAEAAAACAAUAAAAGAAEAAAADAAUAAAAGAAEAAAAEAAUAAAAGAAEAAAAAAAYAAAAGAAEAAAABAAYAAAAGAAEAAAACAAYAAAAGAAEAAAADAAYAAAAGAAEAAAAEAAYAAAAGAAEAAAAPAAUAAAAGAAEAAAAQAAUAAAAGAAEAAAARAAUAAAAGAAEAAAASAAUAAAAGAAEAAAATAAUAAAAGAAEAAAAPAAYAAAAGAAEAAAAQAAYAAAAGAAEAAAARAAYAAAAGAAEAAAASAAYAAAAGAAEAAAATAAYAAAAGAAEAAAAAAAAAAAADAAEAAAABAAAAAAADAAEAAAACAAAAAAADAAEAAAADAAAAAAADAAEAAAAEAAAAAAADAAEAAAAFAAAAAAADAAEAAAAGAAAAAAADAAEAAAAHAAAAAAADAAEAAAAIAAAAAAADAAEAAAAJAAAAAAADAAEAAAAKAAAAAAADAAEAAAALAAAAAAADAAEAAAAMAAAAAAADAAEAAAANAAAAAAADAAEAAAAOAAAAAAADAAEAAAAPAAAAAAADAAEAAAAQAAAAAAADAAEAAAARAAAAAAADAAEAAAASAAAAAAADAAEAAAATAAAAAAADAAEAAAAAAAEAAAADAAEAAAAAAAIAAAADAAEAAAAAAAMAAAADAAEAAAAAAAQAAAAGAAAAAAABAAQAAAAGAAAAAAACAAQAAAAGAAAAAAADAAQAAAAGAAAAAAAEAAQAAAAGAAAAAAAEAAMAAAADAAEAAAAEAAIAAAADAAEAAAAEAAEAAAADAAEAAAADAAEAAAADAAEAAAACAAEAAAADAAEAAAABAAEAAAADAAEAAAABAAIAAAADAAEAAAACAAIAAAADAAEAAAADAAIAAAADAAEAAAACAAMAAAADAAEAAAABAAMAAAADAAEAAAADAAMAAAADAAEAAAAPAAEAAAADAAEAAAAPAAIAAAADAAEAAAAPAAMAAAADAAEAAAAPAAQAAAADAAIAAAAQAAQAAAADAAIAAAARAAQAAAADAAIAAAASAAQAAAADAAIAAAATAAQAAAADAAIAAAATAAMAAAADAAEAAAATAAIAAAADAAEAAAATAAEAAAADAAEAAAASAAEAAAADAAEAAAARAAEAAAADAAEAAAARAAIAAAADAAEAAAARAAMAAAADAAEAAAASAAMAAAADAAEAAAASAAIAAAADAAEAAAAQAAEAAAADAAEAAAAQAAIAAAADAAEAAAAQAAMAAAADAAEAAAAAAAcAAAADAAAAAAAAAAgAAAADAAEAAAAAAAkAAAADAAEAAAAAAAoAAAADAAEAAAAAAAsAAAADAAEAAAATAAsAAAADAAEAAAABAAsAAAADAAEAAAACAAsAAAADAAEAAAADAAsAAAADAAEAAAAEAAsAAAADAAEAAAAFAAsAAAADAAEAAAAGAAsAAAADAAEAAAAHAAsAAAADAAEAAAAIAAsAAAADAAEAAAAJAAsAAAADAAEAAAAKAAsAAAADAAEAAAALAAsAAAADAAEAAAAMAAsAAAADAAEAAAANAAsAAAADAAEAAAAOAAsAAAADAAEAAAAPAAsAAAADAAEAAAAQAAsAAAADAAEAAAARAAsAAAADAAEAAAASAAsAAAADAAEAAAABAAcAAAADAAAAAAABAAgAAAADAAEAAAABAAkAAAADAAEAAAABAAoAAAADAAEAAAACAAcAAAADAAAAAAACAAgAAAADAAEAAAACAAkAAAADAAEAAAACAAoAAAADAAEAAAADAAcAAAADAAAAAAADAAgAAAADAAEAAAADAAkAAAADAAEAAAADAAoAAAADAAEAAAAEAAcAAAAGAAIAAAAEAAgAAAADAAEAAAAEAAkAAAADAAEAAAAEAAoAAAADAAEAAAAPAAcAAAADAAAAAAAPAAgAAAADAAEAAAAPAAkAAAADAAEAAAAPAAoAAAADAAEAAAAQAAcAAAADAAAAAAAQAAgAAAADAAEAAAAQAAkAAAADAAEAAAAQAAoAAAADAAEAAAARAAcAAAADAAAAAAARAAgAAAADAAEAAAARAAkAAAADAAEAAAARAAoAAAADAAEAAAASAAcAAAADAAAAAAASAAgAAAADAAEAAAASAAkAAAADAAEAAAASAAoAAAADAAEAAAATAAcAAAADAAAAAAATAAgAAAADAAEAAAATAAkAAAADAAEAAAATAAoAAAADAAEAAAA=")

[node name="ChessBoard" parent="." node_paths=PackedStringArray("player_party") instance=ExtResource("5_c0n4n")]
z_index = 2
position = Vector2(320, 180)
player_party = NodePath("Player")
metadata/_edit_lock_ = true

[node name="Selector" parent="ChessBoard" node_paths=PackedStringArray("chess_board", "player_party", "opponent_party") instance=ExtResource("6_4wac5")]
position = Vector2(-16, -16)
chess_board = NodePath("..")
player_party = NodePath("../Player")
opponent_party = NodePath("../Oppponent")

[node name="Player" type="Node2D" parent="ChessBoard"]
y_sort_enabled = true
script = ExtResource("7_l4y32")

[node name="Oppponent" type="Node2D" parent="ChessBoard"]
y_sort_enabled = true
script = ExtResource("7_l4y32")
side = 1

[node name="Label" type="Label" parent="."]
offset_left = 16.0
offset_top = 20.0
offset_right = 112.0
offset_bottom = 43.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Game Start"

[connection signal="area_entered" from="ChessBoard/Selector" to="ChessBoard/Selector" method="_on_area_entered"]
[connection signal="area_exited" from="ChessBoard/Selector" to="ChessBoard/Selector" method="_on_area_exited"]
